--- a/src/styles.sass
+++ b/src/styles.sass
@@ -29,7 +29,7 @@ $table-action-color: blue
 
     button
         margin-right: 5px
-    mat-form-field
+    mat-form-field, mat-select
         margin-right: 10px
 
 .error
@@ -44,3 +44,7 @@ $table-action-color: blue
 
 mat-card-title
     padding: 10px
+
+.mat-mdc-optgroup
+    .mat-mdc-optgroup-label
+        font-weight: bold
